CSS consolidation trying to fix navigation bar on mobile devices

--- a/_sass/so-simple/_global.scss
+++ b/_sass/so-simple/_global.scss
@@ -27,11 +27,12 @@
   display: none;
   margin-bottom: 1em;
   text-align: center;
+  font-family: $description-font-family;
 
   ul {
     display: block;
-    margin: 0;
-    padding: 0.25em 0.75em;
+    margin: 0.25;
+    padding: 0.25em 0.25em;
     list-style: none;
 
     @include breakpoint($medium) {
